package usantatecla.mastermind.models;

public interface Session {

    StateValue getValueState();

}