package usantatecla.mastermind.models;

public enum StateValue {
    INITIAL,
    PROPOSAL,
    RESUME,
    EXIT
}
